--- a/cabal.project
+++ b/cabal.project
@@ -1,4 +1,7 @@
 packages:
   ./json-config.cabal
-  ./glabrous/glabrous.cabal
+
+source-repository-package
+  type: git
+  location: https://github.com/jgraydus/glabrous.git
 
