--- a/json-config.cabal
+++ b/json-config.cabal
@@ -18,8 +18,11 @@ library
       lens,
       text
     hs-source-dirs:   lib
-    default-language: Haskell2010
+    ghc-options:
+        -Wall
+        -O2
+        -threaded
+    default-language: GHC2021
     default-extensions:
         OverloadedStrings,
-        ScopedTypeVariables
 
