add dependency on attoparsec-aeson

--- a/json-config.cabal
+++ b/json-config.cabal
@@ -11,6 +11,7 @@ library
     build-depends:
       aeson,
       attoparsec,
+      attoparsec-aeson,
       base < 5.0,
       bytestring,
       containers,
